--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,17 @@ span{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .logo{
-    font-size: 1.2em;
-    font-weight: 600;
+    width: 120px;
+    height: 55%;
+    background: url("../images/logo.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translate(2px, 6px);
 }
 
 .navlinks{
