--- a/css/style.css
+++ b/css/style.css
@@ -467,12 +467,12 @@ SECTION 3
 .event_cards{
     height: 85%;
     width: 100%;
-    background: linear-gradient(to right, rgba(0,0,0,0.3), rgba(255,255,255,0.4), rgba(0,0,0,0.3)), url("../images/event_back.jpg");
+    background: linear-gradient(to right, rgba(0,0,0,0.6), rgba(255,255,255,0.1), rgba(0,0,0,0.6)), url("../images/event_back.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     display: grid;
-    grid-template-areas: "card1 card2 card3" "card4 card4 card5";
+    grid-template-areas: "heading card1 card2" "card3 card4 card5";
     grid-gap: 50px;
     padding: 4% 6%;
 }
@@ -526,6 +526,25 @@ SECTION 3
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.event_heading{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    color: whitesmoke;
+}
+
+.event_heading p{
+    font-size: 1.2em;
+    font-weight: 600;
+    opacity: 0.7;
+}
+
+.event_heading h1{
+    font-size: 3em;
+    font-weight: 600;
 }
 
 .event_name{
