--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,6 @@
     background-color: darkorange;
 }
 
-.s4{
-    background-color: black;
-    color: whitesmoke;
-}
-
 .loading-finish{
     opacity: 0;
     pointer-events: none;
@@ -192,6 +187,7 @@ span{
     font-weight: 600;
     cursor: pointer;
     transition: all .3s ease;
+    white-space: nowrap;
 }
 .registor_now_btn:focus{
     outline: none;
@@ -229,7 +225,7 @@ span{
     color: whitesmoke;
     font-size: 1em;
     font-weight: 500;
-    opacity: 0.7;
+    opacity: 0.8;
     font-size: 1.1em;
 }
 
@@ -384,7 +380,7 @@ SECTION 2
 }
 
 .rkmvcc_text{
-    font-weight: 600;
+    font-weight: 500;
     font-size: 1.2em;
     margin-bottom: 6px;
     opacity: 0.7;
@@ -399,7 +395,7 @@ SECTION 2
 }
 
 .organized_text{
-    font-weight: 600;
+    font-weight: 500;
     margin-bottom: 12px;
     opacity: 0.7;
     font-size: 1.2em;
@@ -660,6 +656,7 @@ SECTION 4
 
 .quote{
     background: rgba(0,0,0,0.8);
+    color: whitesmoke;
     padding: 0 10%;
     border-radius: 20px;
     position: relative;
@@ -740,4 +737,225 @@ SECTION 4
 
 .quote_background a{
     color: whitesmoke;
+}
+
+/*
+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+MEDIA QUERY
+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+*/
+
+@media only screen and (max-width: 768px){
+    .logo{
+        transform: scale(0.8);
+    }
+
+    .navlinks li{
+        display: none;
+    }
+
+    .registor_now_btn{
+        margin: 0;
+    }
+
+    .heading{
+        font-size: 2.5em;
+    }
+
+    .seconadary{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .divider_small{
+        display: none;
+    }
+
+    .time{
+        margin-top: 10px;
+    }
+
+    .container{
+        flex-direction: column-reverse;
+    }
+
+    .timer_background{
+        width: 100%;
+        height: 45%;
+    }
+
+    .timer-days,
+    .timer-hours,
+    .timer-mins,
+    .timer-secs{
+        font-size: 4em;
+    }
+
+    .about_container{
+        width: 100%;
+        height: 55%;
+    }
+
+    .about_heading{
+        font-size: 2em;
+    }
+
+    .events_btn2{
+        display: none;
+    }
+
+    .rkmvcc_text{
+        font-size: 1em;
+        font-weight: 500;
+    }
+
+    .organized_text{
+        font-size: 1em;
+        font-weight: 500;
+        margin-bottom: 30px;
+    }
+
+    .email_text{
+        display: none;
+    }
+
+    .about_text{
+        font-weight: 500;
+    }
+
+    .lower_part{
+        height: 10%;
+    }
+
+    .event_heading{
+        display: none;
+    }
+
+    .event_cards{
+        height: 90%;
+        grid-template-areas: "card1" "card2" "card3" "card4" "card5";
+        grid-gap: 20px;
+        background: linear-gradient(to top, rgba(0,0,0,0.4), rgba(255,255,255,1)), url("../images/event_back.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 6%;
+    }
+
+    .event_card{
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .event_card button{
+        margin: 0;
+        align-self: center;
+        margin-right: 40px;
+    }
+
+    .event_name{
+        font-size: 1.3em;
+    }
+
+    .card1{
+        background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.2)), url("../images/brainopedia.jpg");
+        background-position: bottom;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .card2{
+        background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("../images/tugfofwar.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .card3{
+        background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url("../images/encrypto.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .card4{
+        background: linear-gradient(135deg, rgba(0,0,0,0.8), rgba(0,0,0,0.3)), url("../images/codeaffair.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .card5{
+        background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("../images/upfront.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .lower_part button{
+        padding: 8px 16px;
+    }
+    
+    .cta_link:nth-child(1){
+        margin-right: 30px;
+    }
+
+    .cta_link:nth-child(2){
+        margin: 0;
+    }
+
+    .cta_link:nth-child(3){
+        display: none;
+    }
+
+    .container2{
+        flex-direction: column-reverse;
+    }
+
+    .contact_container{
+        width: 100%;
+        height: 60%;
+    }
+
+    .quote_background{
+        width: 100%;
+        height: 40%;
+    }
+
+    .quote{
+        padding: 0 12%;
+    }
+
+    .head_text{
+        margin-top: 14px;
+        margin-bottom: 12px;
+        font-size: 1em;
+    }
+
+    .bill_img{
+        width: 100px;
+        height: 100px;
+        top: -10%;
+    }
+
+    .quote_name{
+        padding-top: 65px;
+        font-size: 1.3em;
+    }
+
+    .quote_text{
+        font-size: 1.05em;
+        line-height: 24px;
+        padding-bottom: 30px;
+        margin-top: 20px;
+    }
+
+    .arrow_up{
+        bottom: -470px;
+        right: 7%;
+    }
+
+    .rights{
+        bottom: -470px;
+        left: 7%;
+        width: fit-content;
+        font-size: 0.9em;
+    }
 }
