--- a/css/style.css
+++ b/css/style.css
@@ -506,7 +506,7 @@ SECTION 3
 }
 .card2{
     grid-area: card2;
-    background: linear-gradient(135deg, rgba(0,0,0,0.8), rgba(0,0,0,0)), url("../images/tugfofwar.jpg");
+    background: linear-gradient(135deg, rgba(0,0,0,0.8), rgba(0,0,0,0.3)), url("../images/tugfofwar.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -888,12 +888,12 @@ MEDIA QUERY
 
     .card1{
         background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.2)), url("../images/brainopedia.jpg");
-        background-position: bottom;
+        background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
     }
     .card2{
-        background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("../images/tugfofwar.jpg");
+        background: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0.4)), url("../images/tugfofwar.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
