--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,70 @@
     background-color: darkorange;
 }
 
+
+/* temporay content */
+.postpone_container{
+    position: absolute;
+    background: rgba(0,0,0,0.85);
+    height: 100vh;
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s ease;
+}
+
+.actual_content{
+    background: whitesmoke;
+    padding: 40px 50px;
+    border-radius: 20px;
+}
+
+.postpone_text{
+    font-size: 2em;
+    margin-bottom: 0.7em;
+    line-height: 42px;
+}
+
+.inform_text{
+    font-size: 1.2em;
+    font-weight: 500;
+}
+
+.note_text{
+    margin-top: 1.4em;
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.btn_temp{
+    border: 2px solid black;
+    background: transparent;
+    border-radius: 50px;
+    padding: 8px 20px;
+    font-weight: 600;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    transition: all .3s ease;
+    margin-top: 2.5em;
+}
+.btn_temp:hover{
+    transform: translateY(2px);
+}
+.btn_temp:focus{
+    outline: none;
+}
+
+.understood{
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+/* temporay content */
+
+
 .loading-finish{
     opacity: 0;
     pointer-events: none;
